--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $fg-main: map.get(theme.$neutral-palette, 40);
 $bg-button: map.get(theme.$highlight-palette, 40);
 $fg-button: map.get(theme.$primary-palette, 100);
 
+$highlight: map.get(theme.$highlight-palette, 50);
 //$primary-color: #0a3d62;
 //$accent-color: #ff6b6b;
 //$background-color: #f5f5f5;
