--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header-toolbar">
+<div class="toolbar-bar">
   <div class="printable-area-flex">
 <!--    <button mat-icon-button (click)="toggleSidebar()" class="mr-2">-->
 <!--      <mat-icon>menu</mat-icon>-->
